--- a/build.gradle
+++ b/build.gradle
@@ -14,17 +14,22 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "Greenwich.SR1")
+	set('springCloudServicesVersion', "2.1.4.RELEASE")
+	//set('springCloudServicesVersion', "2.1.1.RELEASE")
+	set('springCloudVersion', "Greenwich.RELEASE")
+	//set('springCloudVersion', "Greenwich.M3")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
 	imports {
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
